k8s/providers/alicloud/deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: portfolio
  namespace: portfolio
spec:
  template:
    spec:
      imagePullSecrets:
        - name: acr-pull-secret
