k8s/providers/alicloud/service-patch.yaml
apiVersion: v1
kind: Service
metadata:
  name: portfolio-service
  namespace: portfolio
  annotations:
    service.beta.kubernetes.io/alibaba-cloud-loadbalancer-address-type: internet
spec:
  type: LoadBalancer
