k8s/providers/alicloud/ingress-patch.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: portfolio-ingress
  namespace: portfolio
  annotations:
    service.beta.kubernetes.io/alibaba-cloud-loadbalancer-address-type: internet
